tests/sumo/errors/unknown_vClass/options.sumo
-n net.net.xml --no-step-log

